--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "npm run lite",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lite": "lite-server",
-    "scss": "node-sass -o css/ css/"
+    "compile:sass": "node-sass css/style.scss css/style.css"
   },
   "author": "",
   "license": "ISC",
